# opengl-request-handler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  platform.cpp  platform.h  shader.cpp  shader.h  utils.cpp  utils.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
shaders/: basic.frag  basic.vert  particle_type.glsl  particles.comp  uniforms.glsl
